--- a/Index.html
+++ b/Index.html
@@ -50,6 +50,81 @@
             <img src="" alt="">
         </div>
     </section>
+      <!-- seccion portfolio------------------------------------------ -->
+      <section class="teams" id="teams">
+        <div class="max-width">
+            <h2 class="title">My Clients</h2>
+            <div class="carousel owl-carousel">
+
+                <div class="card">
+                    <div class="box">
+                        <img src="./imagenes/appel.png" alt="">
+
+                    </div>
+                </div>
+
+
+                <div class="card">
+                    <div class="box">
+                        <img src="./imagenes/2.png" alt="">
+
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="./imagenes/convite.png" alt="">
+
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="./imagenes/oliva.jpeg" alt="">
+
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="box">
+                        <img src="./imagenes/3.png" alt="">
+
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="./imagenes/4.png" alt="">
+
+                    </div>
+
+                </div>
+
+
+
+
+    </section>
+      <!-- seccion about ------------------------------------------------->
+      <section class="about" id="about">
+        <div class="max-width">
+
+            <div class="about-content">
+                <div class="column left">
+                    <img src="./imagenes/AdobeStock_300143148_Preview.jpeg" alt="">
+                </div>
+                <div class="column right">
+                    <h2 class="hire">Contratame que soy</h2>
+
+
+                    <div class="why"><span class="typing-2"></span></div>
+
+
+                    <a href="#">1300+<br>Cientes</a>
+                    <a class="btnGreen" href="#">75<br>Paises</a>
+                    <a class="btnPink" href="#">1700+<br>Productos</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
 
     <script src="script.js"></script>
 </body>
