--- a/Index.html
+++ b/Index.html
@@ -282,7 +282,7 @@
                         </div>
                         <div class="field email">
                             <label for="email">Email </label>
-                            <input type="email" name="mail" id="mail" placeholder="" required>
+                            <input type="email" name="email" id="email" placeholder="" required>
                         </div>
                     </div>
                     <div class="field">
@@ -334,5 +334,30 @@
 
 
     <script src="app.js"></script>
+
+    <script>
+        const $form = document.querySelector('#form')
+        const $buttonMailto = document.querySelector('#trucazo')
+
+        $form.addEventListener('submit', handleSubmit)
+
+        function handleSubmit(event) {
+             event.preventDefault()
+             const form = new FormData(this)
+             $buttonMailto.setAttribute('href', `mailto:caroruizsalimei@gmail.com?subject=nombre ${form.get('name')}  correo ${form.get('email')}&body=${form.get('message')}`)
+             $buttonMailto.click()
+        }
+   </script>
+
+    <script>
+     $('.first li').click(function(){
+       $(this).toggleClass("shadow-1").siblings();
+       $(this).toggleClass("fill-color").siblings();
+     });
+     $('.second li').click(function(){
+       $(this).toggleClass("shadow-2").siblings();
+       $(this).toggleClass("fill-color").siblings();
+     });
+  </script>
 </body>
 </html>
